@startuml
class InvoiceBase {
    -invoiceList : ArrayList<Invoice>
    -nextInvoiceId : int

    ~InvoiceBase() : Invoice
    ~getInvoicesList() : void
    ~addInvoice() : void
    ~getInvoiceDetails(invoiceId : int) : void
    ~bumpNextInvoiceId() : void
    ~getInvoice(invoiceId : int) : Invoice
    ~getInvoiceListSize() : int
}

class Invoice <<Record>> {
    -positionList : final ArrayList<Position>
    -companyName : final String
    -invoiceTerm : final LocalDate

    ~Invoice(invoiceId : int, companyName : String, invoiceTerm : LocalDate, positionList : ArrayList<Position>) : Invoice
    ~{static}invoiceFactory(invoiceId : int) : Optional<Invoice>
    ~printInvoiceDetails() : void
    +toString() : String
}

class Position {
    -productName : final String
    -productNetPrice : final double
    -productCount : final int
    -productVat : final int
    -productGrossPrice : final double

    ~Position(productName : String, productGrossPrice : double, productCount : int, productVatPer : int) : Position
    ~{static}positionFactory() : Optional<Position>
    -calculateGrossPrice(productNetPrice : double, productVatPer: int)
    +toString() : String
}

class InvoiceIssuer {
    -invoiceBase() : InvoiceBase

    +InvoiceIssuer() : InvoiceIssuer
    ~issueInvoice() : void
    ~showInvoices() : void
    ~showInvoiceDetails(invoiceId : int) : void
    ~exportInvoice(invoiceId : int) : void
    +run() : void
}

InvoiceBase -- InvoiceIssuer
InvoiceBase o-- Invoice
Invoice *-- Position
@enduml